[metadata]
name = Python-dsstore
version = 1.0.0
author = gehaxelt
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KptCheeseWhiz/Python-dsstore

[options]
py_modules = main,dsstore
python_requires = >=3.0

[options.entry_points]
console_scripts =
    dsstore = main:main

